[project]
name = "orca-py"
version = "0.1.0"
description = "ORCA data analysis"
authors = [
    {name = "Nuwah12", email = "nburget12@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
